deploy: 3bd974653086f1c703845c5ea6300bc80c4aa30a

--- a/Doss-Gollin-CV.tex
+++ b/Doss-Gollin-CV.tex
@@ -3,8 +3,8 @@
 % language setup
 \usepackage[english]{babel}
 
-% margins
-\usepackage[left=0.75in, right=0.75in, top=1in, bottom=0.75in]{geometry}% adjust the page margins
+% margins - slightly increased top for header
+\usepackage[left=0.75in, right=0.75in, top=1.25in, bottom=0.75in]{geometry}% adjust the page margins
 
 \RequirePackage{xcolor}
 \definecolor{RiceBlue}{HTML}{00205B} % official Rice blue color -- use for text etc
@@ -16,14 +16,16 @@
 %% Choose fonts for use with xelatex
 
 
-% Better footer
+% Header and footer (skip first page)
 \usepackage{fancyhdr}
 \fancyhf{}
-\fancyfoot[L]{\textcolor{RiceGray}{James Doss-Gollin}}
-\fancyfoot[C]{\textcolor{RiceGray}{updated \today}}
-\fancyfoot[R]{\textcolor{RiceGray}{\thepage}}
-\renewcommand{\headrulewidth}{0pt}
-\renewcommand{\footrulewidth}{1pt}
+\fancyhead[L]{\footnotesize\textcolor{RiceGray}{James Doss-Gollin}}
+\fancyhead[R]{\footnotesize\textcolor{RiceGray}{jdossgollin@rice.edu}}
+\fancyfoot[L]{\footnotesize\textcolor{RiceGray}{updated \today}}
+\fancyfoot[R]{\footnotesize\textcolor{RiceGray}{p. \thepage\ / \pageref{LastPage}}}
+\renewcommand{\headrulewidth}{0.5pt}
+\renewcommand{\footrulewidth}{0.5pt}
+\renewcommand{\headrule}{\color{RiceGray}\hrule width\headwidth height\headrulewidth \vskip-\headrulewidth}
 \renewcommand{\footrule}{\color{RiceGray}\hrule width\headwidth height\footrulewidth \vskip-\footrulewidth}
 \pagestyle{fancy}
 
@@ -137,61 +139,43 @@
 % include everything in bibliography
 \nocite{*}
 
-% Aggressively clear all fields for preprints since they're not forthcoming
-\AtEveryBibitem{%
-  \ifentrytype{misc}{%
-    \clearfield{year}\clearfield{date}\clearfield{month}\clearfield{day}%
-    \clearfield{addendum}\clearfield{note}\clearfield{urldate}%
-    \clearfield{url}\clearfield{eprint}\clearfield{eprinttype}%
-    \clearfield{pubstate}\clearfield{howpublished}%
-    \clearlist{publisher}\clearlist{location}%
-  }{}%
-  \ifentrytype{online}{%
-    \clearfield{year}\clearfield{date}\clearfield{month}\clearfield{day}%
-    \clearfield{addendum}\clearfield{note}\clearfield{urldate}%
-    \clearfield{url}\clearfield{eprint}\clearfield{eprinttype}%
-    \clearfield{pubstate}\clearfield{howpublished}%
-    \clearlist{publisher}\clearlist{location}%
-  }{}%
+% Custom bibliography environment using alignedentrieshang
+\defbibenvironment{hanging}
+  {\begin{alignedentrieshang}}
+  {\end{alignedentrieshang}}
+  {}
+
+% Custom bibliography drivers for hangingitem format
+\DeclareBibliographyDriver{misc}{%
+  \hangingitem{%
+    \printnames{author}: \printfield[title]{title}. \printfield{journaltitle}%
+    \iffieldundef{doi}{\iffieldundef{url}{}{. \printfield{url}}}{. \printfield{doi}}%
+  }{---}%
+  \entrybreak%
 }
 
-% Suppress all date/URL related formatting for preprints
-\DeclareFieldFormat[misc]{year}{}
-\DeclareFieldFormat[misc]{date}{}
-\DeclareFieldFormat[misc]{url}{}
-\DeclareFieldFormat[misc]{addendum}{}
-\DeclareFieldFormat[misc]{note}{}
-\DeclareFieldFormat[misc]{pubstate}{}
-\DeclareFieldFormat[online]{year}{}
-\DeclareFieldFormat[online]{date}{}
-\DeclareFieldFormat[online]{url}{}
-\DeclareFieldFormat[online]{addendum}{}
-\DeclareFieldFormat[online]{note}{}
-\DeclareFieldFormat[online]{pubstate}{}
-
-% Override URL and DOI macros for preprints
-\AtEveryBibitem{%
-  \ifentrytype{misc}{%
-    \renewbibmacro*{url+urldate}{}%
-    \renewbibmacro*{doi+eprint+url}{\printfield{doi}}%
-  }{}%
-  \ifentrytype{online}{%
-    \renewbibmacro*{url+urldate}{}%
-    \renewbibmacro*{doi+eprint+url}{\printfield{doi}}%
-  }{}%
+\DeclareBibliographyDriver{online}{%
+  \hangingitem{%
+    \printnames{author}: \printfield[title]{title}. \printfield{journaltitle}%
+    \iffieldundef{doi}{\iffieldundef{url}{}{. \printfield{url}}}{. \printfield{doi}}%
+  }{---}%
+  \entrybreak%
 }
 
-% Remove "In:", pages, issue, number, and volume from all entries
-\DeclareFieldFormat{pages}{}
-\DeclareFieldFormat{number}{}
-\DeclareFieldFormat{issue}{}
-\DeclareFieldFormat{volume}{}
-\renewbibmacro{in:}{}
-% Remove volume+number+pages macro entirely
-\renewbibmacro*{volume+number+eid}{}
-% Remove the parentheses around volume/issue/pages
-\renewbibmacro*{journal+issuetitle}{%
-  \usebibmacro{journal}%
+\DeclareBibliographyDriver{article}{%
+  \hangingitem{%
+    \printnames{author}: \printfield[title]{title}. \printfield{journaltitle}%
+    \iffieldundef{doi}{\iffieldundef{url}{}{. \printfield{url}}}{. \printfield{doi}}%
+  }{\printfield{year}}%
+  \entrybreak%
+}
+
+\DeclareBibliographyDriver{inproceedings}{%
+  \hangingitem{%
+    \printnames{author}: \printfield[title]{title}. \printfield{booktitle}%
+    \iffieldundef{doi}{\iffieldundef{url}{}{. \printfield{url}}}{. \printfield{doi}}%
+  }{\printfield{year}}%
+  \entrybreak%
 }
 
 %% other stuff
@@ -202,6 +186,9 @@
 % conditional logic for author highlighting
 \usepackage{ifthen}
 \usepackage{xstring}
+
+% page reference for total page count
+\usepackage{lastpage}
 
 % have to load this last
 \usepackage{hyperref} % Required for adding links	and customizing them
@@ -239,14 +226,18 @@
 \section{APPOINTMENTS}
 
 
-\textbf{Rice University}
+
+\noindent\textbf{Rice University}
+
 \begin{alignedentries}[2em]
-\entryitem{\textit{Assistant Professor}, Department of Civil \& Environmental Engineering}{2021---}\entrybreak
+\entryitem{\textit{Assistant Professor}, Department of Civil \& Environmental Engineering.}{2021---}\entrybreak
 \end{alignedentries}
 
-\textbf{The Pennsylvania State University}
+
+\noindent\textbf{The Pennsylvania State University}
+
 \begin{alignedentries}[2em]
-\entryitem{\textit{Postdoctoral Scholar}, Earth \& Environmental Systems Institute}{2020}
+\entryitem{\textit{Postdoctoral Scholar}, Earth \& Environmental Systems Institute.}{2020}
 \end{alignedentries}
 
 
@@ -254,7 +245,9 @@
 \section{EDUCATION}
 
 
-\textbf{Columbia University}
+
+\noindent\textbf{Columbia University}
+
 \begin{alignedentries}[2em]
 
 \entryitem{\textit{Ph.D. in Earth \& Environmental Engineering}.}{2020}\entrybreak
@@ -263,7 +256,9 @@
 
 \end{alignedentries}
 
-\textbf{Yale University}
+
+\noindent\textbf{Yale University}
+
 \begin{alignedentries}[2em]
 
 \entryitem{\textit{B.S. in Mechanical Engineering}.}{2015}
@@ -306,35 +301,35 @@
 
 \begin{alignedentrieshang}
 
-\hangingitem{\textit{National Science Foundation}\textit{: Confronting Hazards, Impacts and Risks for a Resilient Planet (CHIRRP)}. ``RAISE: Flood Resilience in Rural Texas Communities.'' \textbf{co-PI} (PI: Avantika Gori). \textbf{\$999,986}.}{2025--2028}
+\hangingitem{\textit{National Science Foundation}\textit{: Confronting Hazards, Impacts and Risks for a Resilient Planet (CHIRRP)}. ``RAISE: Flood Resilience in Rural Texas Communities.'' \textbf{Co-PI} (Rice Lead: Avantika Gori) (PI: Avantika Gori). \textbf{\$999,986}.}{2025--2028}
 
 \hangingitem{\textit{Consortium for Enhancing Resilience and Catastrophe Modeling (CERCAT)}. ``A Nonstationary Joint Probability Method for Tropical Cyclone Hazard Assessment.'' \textbf{Lead PI}. \textbf{\$75,000}.}{2025--2026}
 
-\hangingitem{\textit{NVIDIA}. ``Computing Infrastructure for AI-enhanced Climate Risk and Resilience at Rice.'' \textbf{co-PI} (PI: Arlei Lopes da Silva). \textbf{\$0}.}{2025--2025}
+\hangingitem{\textit{NVIDIA}. ``Computing Infrastructure for AI-enhanced Climate Risk and Resilience at Rice.'' \textbf{Co-PI} (PI: Arlei Lopes da Silva). \textbf{in-kind}.}{2025--2025}
 
-\hangingitem{\textit{Rice University Sustainability Institute}. ``Workshop on Nature-Based Solutions for Resilient Coastal Cities.'' \textbf{co-PI} (PI: Avantika Gori). \textbf{\$7,500}.}{2024--2025}
+\hangingitem{\textit{Rice University Sustainability Institute}. ``Workshop on Nature-Based Solutions for Resilient Coastal Cities.'' \textbf{Co-PI} (PI: Philip Bedient). \textbf{\$7,500}.}{2024--2025}
 
 \hangingitem{\textit{Ken Kennedy Institute at Rice University}. ``Advancing AI for Climate Risk and Urban Resilience.'' \textbf{Lead PI}. \textbf{\$160,000}.}{2024--2025}
 
-\hangingitem{\textit{National Science Foundation}. ``IUCRC Planning Grant Rice University: Center for Climate, Equity and Resilience in Catmodeling (CERCat).'' \textbf{co-PI} (PI: Jamie Padgett). \textbf{\$20,000}.}{2024--2025}
+\hangingitem{\textit{National Science Foundation}. ``IUCRC Planning Grant Rice University: Center for Climate, Equity and Resilience in Catmodeling (CERCat).'' \textbf{Co-PI} (PI: Jamie Padgett). \textbf{\$20,000}.}{2024--2025}
 
-\hangingitem{\textit{Texas Water Development Board} (via Texas A\&M University). ``Developing Future Rainfall Frequency Grids for the State of Texas.'' \textbf{Subaward PI}. \textbf{\$77,750}.}{2022--2025}
+\hangingitem{\textit{Texas Water Development Board}. ``Developing Future Rainfall Frequency Grids for the State of Texas.'' \textbf{Rice PI}. \textbf{\$77,750}. Subaward from Texas A\&M University (PI: John Nielsen-Gammon); \$192,828 total}{2022--2025}
 
-\hangingitem{\textit{National Science Foundation}\textit{: Strengthening America's Infrastructure}. ``EAGER: Participatory Design for Water Quality Monitoring of Highly Decentralized Water Infrastructure Systems.'' \textbf{PI} (PI: Alicia Cooperman). \textbf{\$104,684}.}{2022--2025}
+\hangingitem{\textit{National Science Foundation}\textit{: Strengthening America's Infrastructure}. ``EAGER: Participatory Design for Water Quality Monitoring of Highly Decentralized Water Infrastructure Systems.'' \textbf{Rice PI} (PI: Alicia Cooperman). \textbf{\$104,684}.}{2022--2025}
 
-\hangingitem{\textit{National Science Foundation}\textit{: Climate and Large-Scale Dynamics}. ``Collaborative Research: Evaluating the Past and Future of Mississippi River Hydroclimatology to Constrain Risk via Integrated Climate Modeling, Observations, and Reconstructions.'' \textbf{co-PI} (PI: Sylvia Dee). \textbf{\$472,024}.}{2022--2025}
+\hangingitem{\textit{National Science Foundation}\textit{: Climate and Large-Scale Dynamics}. ``Collaborative Research: Evaluating the Past and Future of Mississippi River Hydroclimatology to Constrain Risk via Integrated Climate Modeling, Observations, and Reconstructions.'' \textbf{Co-PI} (Rice Lead: Sylvia Dee) (PI: Sylvia Dee). \textbf{\$472,024}.}{2022--2025}
 
 \hangingitem{\textit{Rice University}\textit{: Sustainable Futures Fund}. ``Leveraging Earth System Observations at Multiple Scales to Improve Stormwater Management in Houston.'' \textbf{Lead PI}. \textbf{\$50,000}.}{2022--2023}
 
-\hangingitem{\textit{100,000 Strong in the Americas Innovation Fund}. ``IFCE-Rice-SENAI Program on Artificial Intelligence for Urban Sustainability and Resilience to Natural Disasters in the Americas.'' \textbf{co-PI} (PI: Arlei Lopes da Silva). \textbf{\$50,000}.}{2022--2023}
+\hangingitem{\textit{100,000 Strong in the Americas Innovation Fund}. ``IFCE-Rice-SENAI Program on Artificial Intelligence for Urban Sustainability and Resilience to Natural Disasters in the Americas.'' \textbf{Co-PI} (PI: Arlei Lopes da Silva). \textbf{\$50,000}.}{2022--2023}
 
-\hangingitem{\textit{Energy Foundation}. ``Synthesis of Texas Electricity Research from Rice University.'' \textbf{co-PI} (PI: Daniel Cohan). \textbf{\$24,928}.}{2022--2023}
+\hangingitem{\textit{Energy Foundation}. ``Synthesis of Texas Electricity Research from Rice University.'' \textbf{Co-PI} (PI: Daniel Cohan). \textbf{\$24,928}.}{2022--2023}
 
 \end{alignedentrieshang}
 
 %% Publications
 
-\section{JOURNAL ARTICLES}
+\section{PUBLICATIONS}
 
 {\textcolor{RiceBlue}{\textbf{$^\mathbf{\dagger}$ denotes Rice advisee publication}}}.
 \href{https://scholar.google.com/citations?user=6ifLBBsAAAAJ}{Google Scholar \aiGoogleScholar} \textit{citations}: 568, \textit{h-index}: 11, \textit{i10-index}: 13.
@@ -347,18 +342,18 @@
 
 \subsection{IN PREP. / UNDER REVIEW}
 
-\printbibliography[filter=ispreprint, heading=none]
+\printbibliography[filter=ispreprint, heading=none, env=hanging]
 
-\subsection{PUBLISHED}
+\subsection{JOURNAL ARTICLES}
 
-\printbibliography[heading=none, type=article]
+\printbibliography[heading=none, type=article, env=hanging]
 
-\section{PEER-REVIEWED CONFERENCE PROCEEDINGS}
+\subsection{PEER-REVIEWED CONFERENCE PAPERS}
 
-\printbibliography[heading=none, type=inproceedings]
+\printbibliography[heading=none, type=inproceedings, env=hanging]
 
 %% Invited Talks
-\section{INVITED TALKS}
+\subsection{INVITED TALKS}
 
 \begin{alignedentrieshang}
 
@@ -399,9 +394,7 @@
 \end{alignedentrieshang}
 
 %% WORKSHOPS
-\section{WORKSHOP PRESENTATIONS}
-
-\textit{Presenter names in \textcolor{RiceBlue}{blue} indicate advisee presentations.}
+\subsection{CONFERENCE AND WORKSHOP PRESENTATIONS}
 
 \medskip
 
@@ -416,19 +409,19 @@
 
 
 
-\hangingitem{\enquote{Advancing Urban Flood Hazard Characterization through Machine Learning: Challenges and Opportunities}. \textbf{American Geophysical Union Fall Meeting 2024}, \textit{AGU}, Washington, DC [\textit{Talk}].}{2024}
+\hangingitem{\enquote{Advancing Urban Flood Hazard Characterization through Machine Learning: Challenges and Opportunities}. \textbf{American Geophysical Union Fall Meeting 2024}, Washington, DC [\textit{Talk}].}{2024}
 
 
 
-\hangingitem{\textcolor{RiceBlue}{\textbf{Yuchen Lu}}: \enquote{TxRAIN-Observational: A Hierarchical Bayesian Spatial Framework to Assess Nonstationary Rainfall Intensity, Frequency, and Duration in Texas}. \textbf{American Geophysical Union Fall Meeting 2024}, \textit{AGU}, Washington, DC [\textit{Talk}].}{2024}
+\hangingitem{\textcolor{RiceBlue}{\textbf{Yuchen Lu}}$^\mathbf{\dagger}$: \enquote{TxRAIN-Observational: A Hierarchical Bayesian Spatial Framework to Assess Nonstationary Rainfall Intensity, Frequency, and Duration in Texas}. \textbf{American Geophysical Union Fall Meeting 2024}, Washington, DC [\textit{Talk}].}{2024}
 
 
 
-\hangingitem{\enquote{Assessing and Managing Climate Risks to Electricity Systems in an Era of Climate Change and Energy Transition}. \textbf{American Geophysical Union Fall Meeting 2024}, \textit{AGU}, Washington, DC [\textit{Talk}].}{2024}
+\hangingitem{\enquote{Assessing and Managing Climate Risks to Electricity Systems in an Era of Climate Change and Energy Transition}. \textbf{American Geophysical Union Fall Meeting 2024}, Washington, DC [\textit{Talk}].}{2024}
 
 
 
-\hangingitem{\textcolor{RiceBlue}{\textbf{Yuchen Lu}}: \enquote{Nonstationary Extreme Precipitation Probabilities in Texas}. \textbf{Fall Meeting}, \textit{Consortium for Enhancing Resilience and Catastrophe Modeling (CERCat)}, Bethlehem, PA [\textit{Poster}].}{2024}
+\hangingitem{\textcolor{RiceBlue}{\textbf{Yuchen Lu}}$^\mathbf{\dagger}$: \enquote{Nonstationary Extreme Precipitation Probabilities in Texas}. \textbf{Fall Meeting}, \textit{Consortium for Enhancing Resilience and Catastrophe Modeling (CERCat)}, Bethlehem, PA [\textit{Poster}].}{2024}
 
 
 
@@ -440,15 +433,15 @@
 
 
 
-\hangingitem{\textcolor{RiceBlue}{\textbf{Yuchen Lu}}: \enquote{Spatially Varying and Duration Dependent Covariate Model: A Hierarchical Bayesian Framework for Multi-duration Extreme Precipitation Frequency Analysis in Texas}. \textbf{World Environmental \& Water Resources Congress 2024}, \textit{Environmental \& Water Resources Institute (EWRI) - ASCE}, Milwaukee, WI [\textit{Talk}].}{2024}
+\hangingitem{\textcolor{RiceBlue}{\textbf{Yuchen Lu}}$^\mathbf{\dagger}$: \enquote{Spatially Varying and Duration Dependent Covariate Model: A Hierarchical Bayesian Framework for Multi-duration Extreme Precipitation Frequency Analysis in Texas}. \textbf{World Environmental \& Water Resources Congress 2024}, \textit{Environmental \& Water Resources Institute (EWRI) - ASCE}, Milwaukee, WI [\textit{Talk}].}{2024}
 
 
 
-\hangingitem{\textcolor{RiceBlue}{\textbf{Yuchen Lu}}: \enquote{H21T-1602: Spatially Varying Covariate Model: A Hierarchical Bayesian Framework for Precipitation Frequency Analysis in the Gulf Coast}. \textbf{American Geophysical Union Fall Meeting 2023}, \textit{AGU}, San Francisco, CA [\textit{Talk}].}{2023}
+\hangingitem{\textcolor{RiceBlue}{\textbf{Yuchen Lu}}$^\mathbf{\dagger}$: \enquote{H21T-1602: Spatially Varying Covariate Model: A Hierarchical Bayesian Framework for Precipitation Frequency Analysis in the Gulf Coast}. \textbf{American Geophysical Union Fall Meeting 2023}, San Francisco, CA [\textit{Talk}].}{2023}
 
 
 
-\hangingitem{\enquote{NH14B-07: Linking Robust Trends in Observations and Models to Develop Nonstationary Rainfall Frequency Grids for the State of Texas}. \textbf{American Geophysical Union Fall Meeting 2023}, \textit{AGU}, San Francisco, CA [\textit{Talk}].}{2023}
+\hangingitem{\enquote{NH14B-07: Linking Robust Trends in Observations and Models to Develop Nonstationary Rainfall Frequency Grids for the State of Texas}. \textbf{American Geophysical Union Fall Meeting 2023}, San Francisco, CA [\textit{Talk}].}{2023}
 
 
 
@@ -456,19 +449,19 @@
 
 
 
-\hangingitem{\textcolor{RiceBlue}{\textbf{Yuchen Lu}}: \enquote{H42E-1333: Nonstationary GEV with Hierarchical Spatial Pooling: A Spatiotemporal Bayesian Framework for Nonstationary Extreme Precipitation Frequency Analysis in the Gulf Coast}. \textbf{American Geophysical Union Fall Meeting 2022}, \textit{AGU}, Chicago, IL [\textit{Talk}].}{2022}
+\hangingitem{\textcolor{RiceBlue}{\textbf{Yuchen Lu}}$^\mathbf{\dagger}$: \enquote{H42E-1333: Nonstationary GEV with Hierarchical Spatial Pooling: A Spatiotemporal Bayesian Framework for Nonstationary Extreme Precipitation Frequency Analysis in the Gulf Coast}. \textbf{American Geophysical Union Fall Meeting 2022}, Chicago, IL [\textit{Talk}].}{2022}
 
 
 
-\hangingitem{\enquote{H35F-07: Near-term Predictability Lowers Long-Term Adaptation Costs}. \textbf{American Geophysical Union Fall Meeting 2022}, \textit{AGU}, Chicago, IL [\textit{Talk}].}{2022}
+\hangingitem{\enquote{H35F-07: Near-term Predictability Lowers Long-Term Adaptation Costs}. \textbf{American Geophysical Union Fall Meeting 2022}, Chicago, IL [\textit{Talk}].}{2022}
 
 
 
-\hangingitem{\enquote{H25U-1265: Operationalizing Bayesian Model Checking for Robust Decision Making: Insights from House Elevation}. \textbf{American Geophysical Union Fall Meeting 2021}, \textit{AGU}, New Orleans, LA [\textit{Poster}].}{2021}
+\hangingitem{\enquote{H25U-1265: Operationalizing Bayesian Model Checking for Robust Decision Making: Insights from House Elevation}. \textbf{American Geophysical Union Fall Meeting 2021}, New Orleans, LA [\textit{Poster}].}{2021}
 
 
 
-\hangingitem{\enquote{A14H-03: How Unprecedented Was the February 2021 Texas Cold Snap?}. \textbf{American Geophysical Union Fall Meeting 2021}, \textit{AGU}, New Orleans, LA [\textit{Talk}].}{2021}
+\hangingitem{\enquote{A14H-03: How Unprecedented Was the February 2021 Texas Cold Snap?}. \textbf{American Geophysical Union Fall Meeting 2021}, New Orleans, LA [\textit{Talk}].}{2021}
 
 
 
@@ -476,7 +469,7 @@
 
 
 
-\hangingitem{\enquote{H11G-07: Towards Adaptive Resilience: Managing Uncertainties and Exploiting Predictability across Timescales}. \textbf{American Geophysical Union Fall Meeting 2019}, \textit{AGU}, San Francisco, CA [\textit{Talk}].}{2019}
+\hangingitem{\enquote{H11G-07: Towards Adaptive Resilience: Managing Uncertainties and Exploiting Predictability across Timescales}. \textbf{American Geophysical Union Fall Meeting 2019}, San Francisco, CA [\textit{Talk}].}{2019}
 
 
 
@@ -488,7 +481,7 @@
 
 
 
-\hangingitem{\enquote{H52F-05: Robust Adaptation to Cyclical Climate Risk}. \textbf{American Geophysical Union Fall Meeting 2018}, \textit{AGU}, Washington, DC [\textit{Talk}].}{2018}
+\hangingitem{\enquote{H52F-05: Robust Adaptation to Cyclical Climate Risk}. \textbf{American Geophysical Union Fall Meeting 2018}, Washington, DC [\textit{Talk}].}{2018}
 
 
 
@@ -496,11 +489,11 @@
 
 
 
-\hangingitem{\enquote{A31H-0135: Causes and Model Skill of the Persistent Intense Rainfall and Flooding in Paraguay during the Austral Summer 2015-2016}. \textbf{American Geophysical Union Fall Meeting 2017}, \textit{AGU}, New Orleans, LA [\textit{Talk}].}{2017}
+\hangingitem{\enquote{A31H-0135: Causes and Model Skill of the Persistent Intense Rainfall and Flooding in Paraguay during the Austral Summer 2015-2016}. \textbf{American Geophysical Union Fall Meeting 2017}, New Orleans, LA [\textit{Talk}].}{2017}
 
 
 
-\hangingitem{\enquote{H22B-02: Designing and Operating Infrastructure for Nonstationary Flood Risk Management}. \textbf{American Geophysical Union Fall Meeting 2017}, \textit{AGU}, New Orleans, LA [\textit{Talk}].}{2017}
+\hangingitem{\enquote{H22B-02: Designing and Operating Infrastructure for Nonstationary Flood Risk Management}. \textbf{American Geophysical Union Fall Meeting 2017}, New Orleans, LA [\textit{Talk}].}{2017}
 
 
 
@@ -560,89 +553,90 @@
 
 
 %% Teaching
-\section{TEACHING}
+\section{TEACHING AND ADVISING}
 
+\subsection{COURSES TAUGHT}
 
-\subsection{Rice University}
-\begin{alignedentries}[2em]
-
-\entryitem{CEVE 421/521: \textit{Climate Risk Management}. Instructor.}{Spring 2024}\entrybreak
-
-\entryitem{CEVE 421/521: \textit{Climate Risk Management}. Instructor.}{Spring 2023}\entrybreak
-
-\entryitem{CEVE 543: \textit{Environmental Data Science}. Instructor.}{Spring 2022}\entrybreak
-
-\entryitem{CEVE 543: \textit{Statistical-Physical Methods for Hydroclimate Extremes and Catastrophes}. Instructor.}{Fall 2025}\entrybreak
-
-\entryitem{CEVE 101: \textit{Fundamentals of Civil and Environmental Engineering}. Instructor.}{Fall 2024}\entrybreak
-
-\entryitem{CEVE 543: \textit{Data Science Methods for Climate Hazard Assessment}. Instructor.}{Fall 2023}\entrybreak
-
-\entryitem{CEVE 101: \textit{Fundamentals of Civil and Environmental Engineering}. Instructor.}{Fall 2021}
-
-\end{alignedentries}
-
-\subsection{Columbia University}
-\begin{alignedentries}[2em]
-
-\entryitem{EAEEE 4257: \textit{Environmental Data Analysis and Modeling}. Teaching Assistant.}{Spring 2018}
-
-\end{alignedentries}
-
-
-%% Advising
-\section{ADVISING}
-
-\subsection{GRADUATE STUDENTS}
 
 \begin{alignedentrieshang}
 
-\hangingitem{True Furrh: \textit{Ph.D. in Civil and Environmental Engineering}, Rice University. \textbf{Committee Member}.}{joined 2021}
+\hangingitem{Rice CEVE 543: \textit{Statistical-Physical Methods for Hydroclimate Extremes and Catastrophes}.}{Fall 2025}
 
-\hangingitem{Dongwook Kim: \textit{Ph.D. in Civil and Environmental Engineering}, Rice University. \textbf{Primary Advisor}.}{joined 2024}
+\hangingitem{Rice CEVE 101: \textit{Fundamentals of Civil and Environmental Engineering}.}{Fall 2024}
 
-\hangingitem{Yuchen Lu: \textit{Ph.D. in Civil and Environmental Engineering}, Rice University. \textbf{Primary Advisor}.}{joined 2021}
+\hangingitem{Rice CEVE 421/521: \textit{Climate Risk Management}.}{Spring 2024}
 
-\hangingitem{Kelsey Murphy: \textit{Ph.D. in Earth, Environmental, and Planetary Sciences}, Rice University. \textbf{Committee Member}.}{joined 2021}
+\hangingitem{Rice CEVE 543: \textit{Data Science Methods for Climate Hazard Assessment}.}{Fall 2023}
 
-\hangingitem{Jonah Schaechter: \textit{Ph.D. in Civil and Environmental Engineering}, Rice University. \textbf{Primary Advisor}.}{joined 2024}
+\hangingitem{Rice CEVE 421/521: \textit{Climate Risk Management}.}{Spring 2023}
 
-\hangingitem{Valeriia Sobolevskaia: \textit{Ph.D. in Earth, Environmental, and Planetary Sciences}, Rice University. \textbf{Committee Member}.}{joined 2020}
+\hangingitem{Rice CEVE 543: \textit{Environmental Data Science}.}{Spring 2022}
 
-
-\hangingitem{Karan Jakhar: \textit{Ph.D. in Mechanical Engineering}, Rice University. Thesis: \enquote{Equation Discovery and Deep Learning for Geophysical Turbulence}. \textbf{Committee Member}.}{2025}
-
-\hangingitem{Kyle Ostlind: \textit{M.S. in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Evaluating Runoff Response to Nature-Based Solutions under Varying Development Scenarios in Upper Cypress Creek near Houston, Texas}. \textbf{Committee Member}.}{2025}
-
-\hangingitem{Katlyn Schmeltzer: \textit{MCEE in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Pre-Trained Long Short-Term Memory Network Performance for Streamflow Prediction in the Brazos River Basin}. \textbf{Primary Advisor}.}{2025}
-
-\hangingitem{John A. Baer: \textit{M.S. in Earth, Marine and Environmental Sciences}, University of North Carolina at Chapel Hill. Thesis: \enquote{Quantifying Precipitation-Induced Uncertainty in Flood Hazard Assessment in a Coastal Urban Area}. \textbf{Committee Member}.}{2024}
-
-\hangingitem{Kendall Capshaw: \textit{Ph.D. in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Modeling Coastal Petrochemical Infrastructure Risk, Resilience, and Cascading Community Consequences}. \textbf{Committee Member}.}{2024}
-
-\hangingitem{Xinyue Luo: \textit{Ph.D. in Earth, Environmental and Planetary Sciences}, Rice University. Thesis: \enquote{Characterizing the El Niño-Southern Oscillation and Its North American Teleconnections over the Last Millennium}. \textbf{Committee Member}.}{2024}
-
-\hangingitem{Anibal Tafur Gutierrez: \textit{Ph.D. in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Methods and Tools for Risk-Informed Resilience Enhancement of Coastal Intermodal Freight Networks}. \textbf{Committee Member}.}{2024}
-
-\hangingitem{Matthew Garcia: \textit{Ph.D. in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Novel Urban Floodplain Modeling Methods for Applications in Coupling Surrogate Machine Learning Methods}. \textbf{Committee Member}.}{2023}
-
-\hangingitem{Mia Peeples: \textit{M.S. in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Modeling Flood Reduction of Nature-Based Channel Modifications in Houston, TX}. \textbf{Committee Member}.}{2023}
-
-\hangingitem{Xiangnan Zhou: \textit{Ph.D. in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Resilience Planning for Water Distribution Systems}. \textbf{Committee Member}.}{2023}
-
-\hangingitem{Raychel Bahnick: \textit{M.S. in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Assessing Land Use Change and Subsidence Impact on Inland Flooding}. \textbf{Committee Member}.}{2022}
-
-\hangingitem{Alyssa Graham: \textit{M.S. in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Water Supply Vulnerability Testing and Robust Planning Analysis with Exploratory Modeling under Deep Uncertainty}. \textbf{Committee Member}.}{2022}
-
-\hangingitem{Elizabeth Hoffmann: \textit{M.S. in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Mapping Dynamic Watershed Response Under Increasing Development Using HEC-RAS 2D: A Case Study of the Big Creek Watershed in Fort Bend County}. \textbf{Committee Member}.}{2022}
-
-\hangingitem{Chunshan Liu: \textit{Ph.D. in Statistics}, Rice University. Thesis: \enquote{Bayesian Graphical Models for Multivariate Time Series}. \textbf{Committee Member}.}{2022}
-
-\hangingitem{Xiaoyu (Toby) Li: \textit{M.S. in Civil and Environmental Engineering}, Rice University. Thesis: \enquote{Evaluating the Effects of Project Brays Mitigation Using Unsteady HEC-RAS Hydraulic Modeling: Application to Meyerland in Houston, TX}. \textbf{Committee Member}.}{2021}
+\hangingitem{Rice CEVE 101: \textit{Fundamentals of Civil and Environmental Engineering}.}{Fall 2021}
 
 \end{alignedentrieshang}
 
-\subsection{UNDERGRADUATE RESEARCH ASSISTANTS}
+
+%% Advising
+\subsection{CURRENT GRADUATE STUDENTS}
+
+\begin{alignedentrieshang}
+
+\hangingitem{True Furrh: \textbf{Ph.D.} in Civil and Environmental Engineering, Rice University. \textbf{Committee Member}.}{2021---}
+
+\hangingitem{Dongwook Kim: \textbf{Ph.D.} in Civil and Environmental Engineering, Rice University. \textbf{Primary Advisor}.}{2024---}
+
+\hangingitem{Yuchen Lu: \textbf{Ph.D.} in Civil and Environmental Engineering, Rice University. \textbf{Primary Advisor}.}{2021---}
+
+\hangingitem{Kelsey Murphy: \textbf{Ph.D.} in Earth, Environmental, and Planetary Sciences, Rice University. \textbf{Committee Member}.}{2021---}
+
+\hangingitem{Jonah Schaechter: \textbf{Ph.D.} in Civil and Environmental Engineering, Rice University. \textbf{Primary Advisor}.}{2024---}
+
+\hangingitem{Valeriia Sobolevskaia: \textbf{Ph.D.} in Earth, Environmental, and Planetary Sciences, Rice University. \textbf{Committee Member}.}{2020---}
+
+\end{alignedentrieshang}
+
+\subsection{PAST GRADUATE STUDENTS}
+
+\begin{alignedentrieshang}
+
+\hangingitem{Karan Jakhar: \textbf{Ph.D.} in Mechanical Engineering, Rice University. Thesis: \enquote{Equation Discovery and Deep Learning for Geophysical Turbulence}. \textbf{Committee Member}.}{2025}
+
+\hangingitem{Kyle Ostlind: \textbf{M.S.} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Evaluating Runoff Response to Nature-Based Solutions under Varying Development Scenarios in Upper Cypress Creek near Houston, Texas}. \textbf{Committee Member}.}{2025}
+
+\hangingitem{Katlyn Schmeltzer: \textbf{MCEE} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Pre-Trained Long Short-Term Memory Network Performance for Streamflow Prediction in the Brazos River Basin}. \textbf{Primary Advisor}.}{2025}
+
+\hangingitem{John A. Baer: \textbf{M.S.} in Earth, Marine and Environmental Sciences, University of North Carolina at Chapel Hill. Thesis: \enquote{Quantifying Precipitation-Induced Uncertainty in Flood Hazard Assessment in a Coastal Urban Area}. \textbf{Committee Member}.}{2024}
+
+\hangingitem{Kendall Capshaw: \textbf{Ph.D.} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Modeling Coastal Petrochemical Infrastructure Risk, Resilience, and Cascading Community Consequences}. \textbf{Committee Member}.}{2024}
+
+\hangingitem{Xinyue Luo: \textbf{Ph.D.} in Earth, Environmental and Planetary Sciences, Rice University. Thesis: \enquote{Characterizing the El Niño-Southern Oscillation and Its North American Teleconnections over the Last Millennium}. \textbf{Committee Member}.}{2024}
+
+\hangingitem{Anibal Tafur Gutierrez: \textbf{Ph.D.} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Methods and Tools for Risk-Informed Resilience Enhancement of Coastal Intermodal Freight Networks}. \textbf{Committee Member}.}{2024}
+
+\hangingitem{Matthew Garcia: \textbf{Ph.D.} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Novel Urban Floodplain Modeling Methods for Applications in Coupling Surrogate Machine Learning Methods}. \textbf{Committee Member}.}{2023}
+
+\hangingitem{Mia Peeples: \textbf{M.S.} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Modeling Flood Reduction of Nature-Based Channel Modifications in Houston, TX}. \textbf{Committee Member}.}{2023}
+
+\hangingitem{Xiangnan Zhou: \textbf{Ph.D.} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Resilience Planning for Water Distribution Systems}. \textbf{Committee Member}.}{2023}
+
+\hangingitem{Raychel Bahnick: \textbf{M.S.} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Assessing Land Use Change and Subsidence Impact on Inland Flooding}. \textbf{Committee Member}.}{2022}
+
+\hangingitem{Alyssa Graham: \textbf{M.S.} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Water Supply Vulnerability Testing and Robust Planning Analysis with Exploratory Modeling under Deep Uncertainty}. \textbf{Committee Member}.}{2022}
+
+\hangingitem{Elizabeth Hoffmann: \textbf{M.S.} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Mapping Dynamic Watershed Response Under Increasing Development Using HEC-RAS 2D: A Case Study of the Big Creek Watershed in Fort Bend County}. \textbf{Committee Member}.}{2022}
+
+\hangingitem{Chunshan Liu: \textbf{Ph.D.} in Statistics, Rice University. Thesis: \enquote{Bayesian Graphical Models for Multivariate Time Series}. \textbf{Committee Member}.}{2022}
+
+\hangingitem{Xiaoyu (Toby) Li: \textbf{M.S.} in Civil and Environmental Engineering, Rice University. Thesis: \enquote{Evaluating the Effects of Project Brays Mitigation Using Unsteady HEC-RAS Hydraulic Modeling: Application to Meyerland in Houston, TX}. \textbf{Committee Member}.}{2021}
+
+\end{alignedentrieshang}
+
+\subsection{UNDERGRADUATE RESEARCHERS}
+
+\textit{Year indicates graduation year.}
+
+\medskip
 
 \begin{alignedentrieshang}
 
@@ -656,20 +650,45 @@
 
 \end{alignedentrieshang}
 
-%% Advisee Awards
-\section{ADVISEE AWARDS}
+\subsection{TEAMS ADVISED}
 
 \begin{alignedentrieshang}
 
-\hangingitem{Karen and John Huff Graduate Fellowship in Civil and Environmental Engineering, \textbf{Dongwook Kim}.}{2025}
+\hangingitem{\textbf{Optimal Policy for Decentralized Wastewater Systems (DWS) while Relaxing Certainty}: Rice Computational Mathematics and Operations Research (CMOR) Senior Project.}{2024-2025}
 
-\hangingitem{H.W. Reeves Endowed Scholarship, \textbf{Yuchen Lu}.}{2022}
+\hangingitem{\textbf{Flood Sight | Advancing Real-Time Flood Predictions for Situational Awareness}: Rice Data to Knowledge (D2K) Lab.}{Spring 2025}
+
+\hangingitem{\textbf{[TBD]}: Rice Data to Knowledge (D2K) Lab.}{Fall 2025}
+
+\end{alignedentrieshang}
+
+%% Advisee Awards
+\subsection{ADVISEE AWARDS}
+
+\begin{alignedentrieshang}
+
+\hangingitem{\textbf{Dongwook Kim}: Karen and John Huff Graduate Fellowship in Civil and Environmental Engineering.}{2025}
+
+\hangingitem{\textbf{Yuchen Lu}: H.W. Reeves Endowed Scholarship.}{2022}
 
 \end{alignedentrieshang}
 
 
 %% Service
 \section{SERVICE ACTIVITIES}
+
+\subsection{DEPARTMENTAL SERVICE}
+\begin{alignedentrieshang}
+
+\hangingitem{\textbf{Member}, Graduate Studies Committee.}{2024---}
+
+\hangingitem{\textbf{Member}, Diversity, Equity, and Inclusion Committee.}{2024}
+
+\hangingitem{\textbf{Member}, Seminar Committee.}{2023--2024}
+
+\hangingitem{\textbf{Member}, Faculty Search Committee.}{2022--2023}
+
+\end{alignedentrieshang}
 
 \subsection{UNIVERSITY SERVICE}
 \begin{alignedentrieshang}
@@ -682,23 +701,12 @@
 
 \end{alignedentrieshang}
 
-\subsection{DEPARTMENTAL SERVICE}
-\begin{alignedentrieshang}
-
-\hangingitem{\textbf{Member}, Diversity, Equity, and Inclusion Committee. Department of Civil and Environmental Engineering.}{2024--2024}
-
-\hangingitem{\textbf{Member}, Seminar Committee. Department of Civil and Environmental Engineering.}{2023--2024}
-
-\end{alignedentrieshang}
-
 \subsection{PROFESSIONAL SERVICE}
 \begin{alignedentrieshang}
 
 \hangingitem{\textbf{Committee Member}, Water and Society Newsletter Committee. American Geophysical Union.}{2024---}
 
-\hangingitem{\textbf{Panelist}, Webinar Series. Society for Risk Analysis. Panelist for webinar on risk analysis methodologies.}{2024---}
-
-\hangingitem{\textbf{Committee Member}, Environmental and Water Resources Systems Committee (EWRS). Environmental \& Water Resources Institute (EWRI).}{2021---}
+\hangingitem{\textbf{Committee Member}, Environmental and Water Resources Systems (EWRS) Committee. American Society of Civil Engineers (ASCE) Environmental \& Water Resources Institute (EWRI).}{2021---}
 
 \end{alignedentrieshang}
 
@@ -711,23 +719,23 @@
   \hangingitem{\textbf{Other:} Electric Power Research Institute (EPRI); Texas Water Development Board (TWDB).
   }{}
 \end{alignedentrieshang}
-
+%
 \subsection{SESSIONS CONVENED}
 \begin{alignedentrieshang}
 
-\hangingitem{\textbf{Co-Organizer}. \textit{Nature-Based Solutions for a Resilient Gulf Coast Workshop} at \textbf{Rice University}, Houston, TX.}{2025}
+\hangingitem{\textbf{Co-Organizer}. \textit{Nature-Based Solutions for a Resilient Gulf Coast}. \textbf{Rice University}, Houston, TX.}{2025}
 
-\hangingitem{\textbf{Primary Convener}. \textit{H31G - Integrating Social, Scientific, and Engineering Approaches to Identify and Address Gaps in Water Infrastructure and Household Water Security} at \textbf{American Geophysical Union Fall Meeting}, San Francisco, CA.}{2023}
+\hangingitem{\textbf{Primary Convener}. \textit{H31G - Integrating Social, Scientific, and Engineering Approaches to Identify and Address Gaps in Water Infrastructure and Household Water Security}. \textbf{American Geophysical Union Fall Meeting}, San Francisco, CA.}{2023}
 
-\hangingitem{\textbf{Convener}. \textit{NH41C - Hybrid Modeling and Digital Twin Systems for Flood Hazard Prediction and Risk Assessment at Different Spatial Scales} at \textbf{American Geophysical Union Fall Meeting}, Washington, DC.}{2023}
+\hangingitem{\textbf{Convener}. \textit{NH41C - Hybrid Modeling and Digital Twin Systems for Flood Hazard Prediction and Risk Assessment at Different Spatial Scales}. \textbf{American Geophysical Union Fall Meeting}, Washington, DC.}{2023}
 
-\hangingitem{\textbf{Chair}. \textit{H44G -- Water and Society: Interdisciplinary Perspectives on Hydroclimatic Forecasting for Water Resources Decision Making} at \textbf{American Geophysical Union Fall Meeting}, New Orleans, LA.}{2021}
+\hangingitem{\textbf{Chair}. \textit{H44G -- Water and Society: Interdisciplinary Perspectives on Hydroclimatic Forecasting for Water Resources Decision Making}. \textbf{American Geophysical Union Fall Meeting}, New Orleans, LA.}{2021}
 
-\hangingitem{\textbf{Primary Convener}. \textit{NH53 -- Emerging Needs and Approaches for Climate Services: Understanding and Developing Innovative Approaches to User-Oriented Climate Services} at \textbf{American Geophysical Union Fall Meeting}, San Francisco, CA.}{2019}
+\hangingitem{\textbf{Primary Convener}. \textit{NH53 -- Emerging Needs and Approaches for Climate Services: Understanding and Developing Innovative Approaches to User-Oriented Climate Services}. \textbf{American Geophysical Union Fall Meeting}, San Francisco, CA.}{2019}
 
-\hangingitem{\textbf{Student Organizer}. \textit{Earth and Environmental Engineering Student Research Symposium} at \textbf{Columbia University}, New York, NY.}{2018}
+\hangingitem{\textbf{Student Organizer}. \textit{Earth and Environmental Engineering Student Research Symposium}. \textbf{Columbia University}, New York, NY.}{2018}
 
-\hangingitem{\textbf{Student Organizer}. \textit{Earth and Environmental Engineering Student Research Symposium} at \textbf{Columbia University}, New York, NY.}{2017}
+\hangingitem{\textbf{Student Organizer}. \textit{Earth and Environmental Engineering Student Research Symposium}. \textbf{Columbia University}, New York, NY.}{2017}
 
 \end{alignedentrieshang}
 
@@ -738,7 +746,7 @@
 
 \hangingitem{\textbf{Social and Behavioral Research - Basic/Refresher} --- \textit{CITI Program}.}{2025--2028}
 
-\hangingitem{\textbf{Strategic Program to Accelerate Researchers in Computing (SPARC) Participant} --- \textit{Natural Hazards Engineering Research Infrastructure (NHERI) DesignSafe-CI}. https://www.designsafe-ci.org/learning-center/sparc/.}{2025}
+\hangingitem{\textbf{Strategic Program to Accelerate Researchers in Computing (SPARC) Participant} --- \textit{Natural Hazards Engineering Research Infrastructure (NHERI) DesignSafe-CI}.}{2025}
 
 \hangingitem{\textbf{Panel Fellow} --- \textit{NSF CMMI's Game Changer Academies for Advancing Research Innovation}.}{2021}
 
