--- a/Doss-Gollin-CV.tex
+++ b/Doss-Gollin-CV.tex
@@ -132,6 +132,7 @@
 
 % highlight group members (will be purple with asterisk)
 \plauthorname[Yuchen]{Lu}
+\plauthorname[Katlyn]{Schmeltzer}
 
 % add bibliography resource
 \addbibresource{my-papers.bib}
@@ -315,7 +316,7 @@
 
 \hangingitem{\textit{Texas Water Development Board}. ``Developing Future Rainfall Frequency Grids for the State of Texas.'' \textbf{Rice PI} (PI: John Nielsen-Gammon). \textbf{\$77,750}. Subaward from Texas A\&M University; \$192,828 total.}{2022--2025}
 
-\hangingitem{\textit{National Science Foundation}\textit{: Strengthening America's Infrastructure}. ``EAGER: Participatory Design for Water Quality Monitoring of Highly Decentralized Water Infrastructure Systems.'' \textbf{Rice PI} (PI: Alicia Cooperman). \textbf{\$104,684}.}{2022--2025}
+\hangingitem{\textit{National Science Foundation}\textit{: Strengthening America's Infrastructure}. ``Collaborative Research: EAGER: Participatory Design for Water Quality Monitoring of Highly Decentralized Water Infrastructure Systems.'' \textbf{Rice PI} (PI: Alicia Cooperman). \textbf{\$85,046}.}{2022--2025}
 
 \hangingitem{\textit{National Science Foundation}\textit{: Climate and Large-Scale Dynamics}. ``Collaborative Research: Evaluating the Past and Future of Mississippi River Hydroclimatology to Constrain Risk via Integrated Climate Modeling, Observations, and Reconstructions.'' \textbf{Co-PI} (Rice Lead: Sylvia Dee). \textbf{\$472,024}.}{2022--2025}
 
@@ -357,13 +358,11 @@
 
 \begin{alignedentrieshang}
 
-\hangingitem{Panelist. Exploring Water Resilience to Emerging Challenges,  \textbf{Society for Risk Analysis}, Remote Presentation.}{2024}
+\hangingitem{Panelist. Exploring Water Resilience to Emerging Challenges,  \textbf{Society for Risk Analysis}, Remote Presentation.}{2025}
 
 \hangingitem{\enquote{Advancing Urban Flood Risk Management through Physics-informed, Data-Driven Hazard Assessment}. Earth, Marine, and Environmental Science Seminar,  \textbf{University of North Carolina}, Chapel Hill, NC.}{2024}
 
 \hangingitem{\enquote{Quantifying and Characterizing Uncertain Climate Hazards to Enable Adaptive Resilience}. Atmospheric Sciences Seminar,  \textbf{Texas A\&M University}, College Station, TX.}{2022}
-
-\hangingitem{\enquote{Unprecedented Impacts Don't Require Unprecedented Weather}. Post-Harvey Climate \& Flood Impacts on the Built Environment,  \textbf{Severe Storm Prediction, Education, \& Evacuation from Disasters Center}, Houston, TX.}{2022}
 
 \hangingitem{\enquote{Revisiting Our Design Criteria: What Hazards Should We Design for in a Changing Climate?}. Hydrologic Sciences and Water Resources Engineering Seminar,  \textbf{University of Colorado Boulder}, Remote Presentation.}{2022}
 
@@ -454,6 +453,10 @@
 
 
 \hangingitem{\enquote{H35F-07: Near-term Predictability Lowers Long-Term Adaptation Costs}. \textbf{American Geophysical Union Fall Meeting 2022}, Chicago, IL [\textit{Talk}].}{2022}
+
+
+
+\hangingitem{\enquote{Unprecedented Impacts Don't Require Unprecedented Weather}. \textbf{Post-Harvey Climate \& Flood Impacts on the Built Environment}, \textit{Severe Storm Prediction, Education, \& Evacuation from Disasters Center}, Houston, TX.}{2022}
 
 
 
@@ -712,9 +715,9 @@
 
 \subsection{PEER REVIEW}
 \begin{alignedentrieshang}[2em]
-  \hangingitem{\textbf{Journals:} AGU Advances; Climate Risk Management; Climatic Change; Communications Earth and Environment; Earth's Future; Energy Technology; Environmental Data Science; Environmental Research Letters; Geophysical Research Letters; Hydrology and Earth System Sciences; Joule; Journal of Applied Meteorology and Climatology; Journal of Hydrology; Journal of Water Resources Management and Planning; Oxford Journal of Development Studies; Water Resources Research; Water Security; Weather, Climate, and Society.
+  \hangingitem{\textbf{Journals:} AGU Advances; Climate Risk Management; Climatic Change; Communications Earth and Environment; Earth's Future; Energy Technology; Engineering Applications of Computational Fluid Mechanics; Environmental Data Science; Environmental Research Letters; Geophysical Research Letters; Hydrology and Earth System Sciences; IEEE Transactions on Geoscience and Remote Sensing; Joule; Journal of Applied Meteorology and Climatology; Journal of Hydrology; Journal of Water Resources Management and Planning; Machine Learning: Earth; Natural Hazards and Earth System Sciences; NPJ Natural Hazards; Oxford Journal of Development Studies; Water Resources Research; Water Security; Weather, Climate, and Society.
   }{}
-  \hangingitem{\textbf{Funding Agencies:} Department of Energy (BER); National Science Foundation.
+  \hangingitem{\textbf{Funding Agencies:} Department of Energy (BER); Dutch Research Council (NWO); National Science Foundation.
   }{}
   \hangingitem{\textbf{Other:} Electric Power Research Institute (EPRI); Texas Water Development Board (TWDB).
   }{}
